fix(v1.0.0): header links alignment

--- a/versions/latest/themes/devsparks/static/css/main.css
+++ b/versions/latest/themes/devsparks/static/css/main.css
@@ -43,10 +43,6 @@ a:hover {
   border: 2px solid var(--border-color);
 }
 
-.layout__header nav {
-  display: flex;
-}
-
 .tip__container {
   position: relative;
   margin-top: 300px;
